# SUnSET

./: TODO.md  config.yaml  entity_cache.json  main.py  pyproject.toml
.claude/: settings.local.json
dev/: 00_overview.md  01_data_config.md  02_stage1_set_generation.md  03_stage2_clustering.md  04_stage3_timeline.md  05_evaluation.md  pdf_plain.txt  pdf_strings.txt  pdf_text.txt  pdf_text_simple.txt
dev/dependency_fix/: pyrouge_wordnet_fix.md
results/test_gte/: global_stats.json  metrics.json  pipeline_result.json  report.txt
results/test_gte/evaluation/: EgyptianProtest_result.json
results/test_gte/stage1/: EgyptianProtest_events.jsonl
results/test_gte/stage2/: EgyptianProtest_clusters.jsonl
results/test_gte/stage3/: EgyptianProtest_timeline.json
results/test_pipeline/: config.json  global_stats.json  metrics.json  pipeline_result.json  report.txt
results/test_pipeline/evaluation/: EgyptianProtest_result.json  Finan_result.json
sunset/: __init__.py
sunset/config/: __init__.py  settings.py
sunset/data/: __init__.py  loader.py
sunset/evaluation/: __init__.py  metrics.py  tilse_wrapper.py
sunset/pipeline/: __init__.py  runner.py
sunset/stage1_set/: __init__.py  coreference.py  extractor.py  llm_client.py
sunset/stage2_clustering/: __init__.py  clustering.py  embedding.py  global_stats.py  graph.py  relevance.py
sunset/stage3_timeline/: __init__.py  generator.py  significance.py  textrank.py
sunset/utils/: __init__.py  artifacts.py  logging.py  metrics.py
tests/: test_evaluation.py  test_stage1.py  test_stage2.py  test_stage3.py
(+12 files in other folders)
